--- a/PE1_Polygonberechnungen/PE1_Polygonberechnungen.vcxproj
+++ b/PE1_Polygonberechnungen/PE1_Polygonberechnungen.vcxproj
@@ -153,6 +153,9 @@
   <ItemGroup>
     <ClCompile Include="PE1_Polygonberechnungen.c" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Debug\polygon.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
